--- a/src/layout/main-layout.css
+++ b/src/layout/main-layout.css
@@ -3,11 +3,14 @@
   flex-direction: row;
   /* align-items: center; */
   height: 100vh;
+  max-height: 100%;
+  width: 100%;
+  max-width: 100%;
 }
 
 .left-side {
   background-color: red;
-  width: 200px;
+  width: 30%;
   padding: 2%;
 }
 
@@ -21,8 +24,8 @@
 }
 
 .upper-menu {
-  width: 100wh;
-  height: 3%;
+  width: 100%;
+  height: max;
   background-color: aqua;
 
 }
