--- a/src/css/common.module.css
+++ b/src/css/common.module.css
@@ -1,3 +1,9 @@
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
+  --fontSize: 14px;
+}
+
 .center {
   text-align: center;
   justify-self: center;
